@@ -1151,6 +1151,8 @@ void buildSpellArray()
 
   discArray[SKILL_FOCUSED_AVOIDANCE] = new spellInfo(SKILL_GENERAL, DISC_DEFENSE, DISC_DEFENSE, "focused avoidance", TASK_EASY, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_1, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_UNUSUAL, 0.0, 0, 0);
 
+  discArray[SKILL_TOUGHNESS] = new spellInfo(SKILL_GENERAL, DISC_DEFENSE, DISC_DEFENSE, "toughness", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_1, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_UNUSUAL, 0.0, 0, 0);
+
   // disc_offense
 
   discArray[SKILL_ADVANCED_OFFENSE] = new spellInfo(SKILL_GENERAL, DISC_OFFENSE, DISC_OFFENSE, "advanced offense", TASK_NORMAL, LAG_0, POSITION_SITTING, MANA_0, LIFEFORCE_0, PRAY_0, 0, SYMBOL_STRESS_0, "", "", "", "", START_1, LEARN_1, START_DO_1, LEARN_DO_1, START_DO_NO, LEARN_DO_NO, LEARN_DIFF_UNUSUAL, 0.0, 0, 0);
