@@ -557,6 +557,7 @@ enum spellNumT {
      SKILL_LOGGING,
      SKILL_ADVANCED_DEFENSE,
      SKILL_FOCUSED_AVOIDANCE,
+     SKILL_TOUGHNESS,
      SKILL_MANA,
      SKILL_MEND,
      SKILL_FORAGE,
