@@ -1,0 +1,5 @@
+A skilled defender can develop the ability to withstand blows with more
+tenacity. When struck in combat the combatant can "proc" toughness which
+offers a small amount of protection from non-magical attacks. This affect
+lasts a very short time but each proc will reset the timer and add an
+additional stack of toughness. Toughness can stack up to twelve times.
